opam-version: "2.0"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/ocaml-h2"
bug-reports: "https://github.com/anmonteiro/ocaml-h2/issues"
dev-repo: "git+https://github.com/anmonteiro/ocaml-h2.git"
doc: "https://anmonteiro.github.io/ocaml-h2/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06"}
  "dune" {>= "1.7"}
  "faraday-async"
  "async"
  "gluten-async"
  "h2" {>= version}
]
depopts: ["async_ssl"]
synopsis: "Async support for h2"
description: """
h2 is an implementation of the HTTP/2 specification entirely in OCaml.
h2-async provides an Async runtime implementation for h2.
"""
