opam-version: "2.0"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/ocaml-h2"
bug-reports: "https://github.com/anmonteiro/ocaml-h2/issues"
dev-repo: "git+https://github.com/anmonteiro/ocaml-h2.git"
doc: "https://anmonteiro.github.io/ocaml-h2/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06"}
  "faraday-lwt-unix"
  "h2-lwt" {>= version}
  "dune" {>= "1.7"}
  "lwt"
  "gluten-lwt-unix" {>= "0.2.1"}
]
depopts: [
  "tls"
  "lwt_ssl"
]
synopsis: "Lwt + UNIX support for h2"
description: """
h2 is an implementation of the HTTP/2 specification entirely in OCaml.
h2-lwt-unix provides an Lwt runtime implementation for h2 that targets UNIX
binaries.
"""
