opam-version: "2.0"
name: "h2-mirage"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/h2"
dev-repo: "git+https://github.com/anmonteiro/h2.git"
bug-reports: "https://github.com/anmonteiro/h2/issues"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.04"}
  "faraday-lwt"
  "h2-lwt"
  "dune" {build}
  "lwt"
  "mirage-conduit"
  "cstruct"
]
synopsis: "Mirage support for h2"
