opam-version: "2.0"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/ocaml-h2"
dev-repo: "git+https://github.com/anmonteiro/ocaml-h2.git"
bug-reports: "https://github.com/anmonteiro/ocaml-h2/issues"
doc: "https://anmonteiro.github.io/ocaml-h2/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06"}
  "faraday-lwt"
  "h2-lwt" {>= version}
  "gluten-lwt" {>= "0.2.0"}
  "dune" {>= "1.7"}
  "lwt"
  "gluten-mirage"
  "conduit-mirage" {>= "2.0.2"}
  "mirage-flow" {>= "2.0.0"}
  "cstruct"
]
synopsis: "Mirage support for h2"
description: """
h2 is an implementation of the HTTP/2 specification entirely in OCaml.
h2-mirage provides an Lwt runtime implementation for h2 that targets MirageOS
unikernels.
"""
