opam-version: "2.0"
name: "hpack"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
homepage: "https://github.com/anmonteiro/h2"
license: "MIT"
dev-repo: "git+https://github.com/anmonteiro/h2.git"
bug-reports: "https://github.com/anmonteiro/h2/issues"
depends: [
  "ocaml" {>= "4.04"}
  "dune" {build}
  "yojson" {with-test}
  "hex" {with-test}
  "angstrom"
  "faraday"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis:
  "An HPACK (Header Compression for HTTP/2) implementation in OCaml"
