opam-version: "2.0"
name: "http2af-lwt-unix"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/http2af"
bug-reports: "https://github.com/anmonteiro/http2af/issues"
dev-repo: "git+https://github.com/anmonteiro/http2af.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "faraday-lwt-unix"
  "http2af"
  "dune" {build}
  "lwt"
]
synopsis: "Lwt + UNIX support for http2/af"
