opam-version: "2.0"
name: "http2af-mirage"
maintainer: "Antonio Nuno Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Nuno Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/http2af"
dev-repo: "git+https://github.com/anmonteiro/http2af.git"
bug-reports: "https://github.com/anmonteiro/http2af/issues"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.04"}
  "faraday-lwt"
  "http2af-lwt"
  "dune" {build}
  "lwt"
  "mirage-conduit"
  "cstruct"
]
synopsis: "Mirage support for http2/af"
