opam-version: "2.0"
maintainer: "Antonio Monteiro <anmonteiro@gmail.com>"
authors: [ "Antonio Monteiro <anmonteiro@gmail.com>" ]
license: "BSD-3-clause"
homepage: "https://github.com/anmonteiro/http2af"
bug-reports: "https://github.com/anmonteiro/http2af/issues"
dev-repo: "git+https://github.com/anmonteiro/http2af.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "alcotest" {with-test}
  "bigstringaf" {>= "0.5.0"}
  "angstrom" {>= "0.11.2"}
  "faraday" {>= "0.5.0"}
  "result"
  "psq"
  "hpack"
  "httpaf"
]
synopsis:
  "A high-performance, memory-efficient, and scalable HTTP/2 library for for OCaml"
description: """
http2/af is an implementation of the HTTP/2 specification entirely in OCaml. It
is based on the concepts in http/af, and therefore uses the Angstrom and
Faraday libraries to implement the parsing and serialization layers of the
HTTP/2 standard as a state machine that is agnostic to the underlying I/O
specifics. It also preserves the same API as http/af wherever possible.
"""
