(executables
 (names test_h2 test_h2_client test_h2_server test_priority)
 (libraries bigstringaf h2 alcotest test_common fmt faraday bigarray-compat
   hpack httpaf)
 (modules test_h2 test_h2_client test_h2_server test_priority))

(alias
 (name runtest)
 (deps test_priority.exe)
 (action
  (run %{deps})))

(alias
 (name runtest)
 (deps test_h2.exe)
 (action
  (run %{deps})))

(alias
 (name runtest)
 (deps test_h2_server.exe)
 (action
  (run %{deps})))

(alias
 (name runtest)
 (deps test_h2_client.exe)
 (action
  (run %{deps})))

(library
 (name test_common)
 (libraries bigstringaf hex h2 alcotest httpaf faraday bigarray-compat
   angstrom)
 (modules test_common))

(executable
 (name test_frames)
 (libraries h2 alcotest yojson hex angstrom test_common bigstringaf fmt)
 (modules test_frames))

(alias
 (name runtest)
 (deps
  (:test_exe test_frames.exe)
  (source_tree "http2-frame-test-case/"))
 (action
  (run %{test_exe})))
