(library
 (name h2_lwt_unix)
 (public_name h2-lwt-unix)
 (libraries
  faraday-lwt-unix
  h2
  h2-lwt
  lwt.unix
  lwt
  bigarray-compat
  (select
   ssl_io.ml
   from
   (bigstringaf lwt_ssl ssl faraday -> ssl_io_real.ml)
   (-> ssl_io_dummy.ml))
  (select
   tls_io.ml
   from
   (cstruct nocrypto.lwt tls.lwt -> tls_io_real.ml)
   (-> tls_io_dummy.ml)))
 (modules h2_lwt_unix tls_io ssl_io)
 (flags
  (:standard -safe-string)))
